Upgrade to Solr 4.10.0, support a local ~/.sstk overrides file, artifacts for testing Fusion indexing pipelines.